--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form method="POST">
+		<label for="name">Name:</label>
+		<input type="text" id="name" minlength=3 maxlength=50>
+		<br>
+		<label for="portfolio">Portfolio:</label>
+		<input type="url" id="portfolio" minlength=3 maxlength=50>
+		<br>
+		<label for="favColor">Favourite Color:</label>
+		<input type="color" id="favColor">
+		<br>
+		<label for="likeness">Likeness:</label>
+		<input type="range" id="likeness" min=1 max=100>
+		<br>
+		<button>Submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
